# SpectralBRDF

./: .gitignore  README.md  demo.bat  download_bsdf.py  render.py  render_brdf.py  render_isotropic.py  render_sphere_rgb.py  see.ipynb  wis.npy  wos.npy
RGB_BRDF/: CMakeLists.txt  setup.py
RGB_BRDF/src/: RGBBRDF.cpp  SpecBRDF.cpp  test.cpp
Spectral_BRDF/: CMakeLists.txt  setup.py
Spectral_BRDF/SpecBRDF.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Spectral_BRDF/pybind11/: .travis.yml  setup.py
Spectral_BRDF/pybind11/docs/: conf.py  faq.rst
Spectral_BRDF/pybind11/include/pybind11/: buffer_info.h  cast.h  embed.h  pybind11.h  pytypes.h  stl_bind.h
Spectral_BRDF/pybind11/include/pybind11/detail/: class.h  common.h  internals.h
Spectral_BRDF/pybind11/pybind11/: __init__.py  __main__.py  _version.py
Spectral_BRDF/pybind11/tests/: constructor_stats.h  test_buffers.py  test_builtin_casters.cpp  test_builtin_casters.py  test_copy_move.py  test_exceptions.py  test_stl_binders.py
Spectral_BRDF/pybind11/tools/: FindPythonLibsNew.cmake  pybind11Tools.cmake
supp_info/: L_10.txt  L_32.txt  L_average_32_60d.txt  bunny_Normal_100.npy  bunny_mask_100.npy  obj_anisotropic.txt  obj_isotropic.txt  obj_mitsuba.txt  sample_sphere_light_100_3.npy  sample_sphere_light_100_3.txt  sphere_mask_24.npy  sphere_normal_24.npy
